[package]
name = "xdp-protection-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-protection-common = { path = "../xdp-protection-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true, features = ["real-sys"] }

[[bin]]
name = "xdp-protection"
path = "src/main.rs"
